--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,6 @@ spring.ai.openai.api-key=${OPENAI_API_KEY}
 
 spring.ai.vertex.ai.gemini.project-id=ai1fortutorial
 spring.ai.vertex.ai.gemini.location=us-central1
-spring.ai.vertex.ai.gemini.chat.options.model=vertex-pro-vision
+spring.ai.vertex.ai.gemini.chat.options.model=gemini-pro-vision
 spring.ai.vertex.ai.gemini.chat.options.temperature=0.5
 
